Fixed Notification being behind Sidebar

--- a/src/dzeio/NotificationManager/NotificationManager.module.styl
+++ b/src/dzeio/NotificationManager/NotificationManager.module.styl
@@ -5,6 +5,7 @@
 	bottom 0
 	left 0
 	padding 0 16px
+	z-index 400
 	max-width 25%
 	@media (max-width $tablet)
 		max-width 50%
